# mpi-pytest

./: README.md  pyproject.toml
.github/etc/: test_environment_mpich.yml  test_environment_msmpi.yml  test_environment_openmpi.yml
.github/workflows/: ci.yml  ci_pipeline.yml  release.yml
pytest_mpi/: __init__.py  detect_mpiexec_implementation.py  parallel_assert.py  plugin.py
tests/: test_parallel_assert.py  test_parallel_marker.py
