[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mpi-pytest"
# <year.month.patch>
version = "2025.6.0.dev0"
dependencies = ["mpi4py", "pytest"]
authors = [
  { name="Connor Ward", email="c.ward20@imperial.ac.uk" },
  { name="Jack Betteridge", email="j.betteridge@imperial.ac.uk" },
]
description = "A pytest plugin for executing tests in parallel with MPI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: Pytest",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
]

[project.entry-points.pytest11]
mpi-pytest = "pytest_mpi.plugin"
